[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-org-cost-monitor"
version = "0.1.0"
description = "CLI for OpenAI and Anthropic organization cost reports"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kaicheng Yang" }]
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
llm-org-cost = "llm_org_cost_monitor.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_org_cost_monitor"]
