[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-org-cost-monitor"
version = "0.1.1"
description = "CLI for OpenAI and Anthropic organization cost reports"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kaicheng Yang" }]
keywords = ["anthropic", "cli", "cost-monitoring", "openai", "usage-reporting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/yang3kc/llm-org-cost-monitor"
Repository = "https://github.com/yang3kc/llm-org-cost-monitor"
Issues = "https://github.com/yang3kc/llm-org-cost-monitor/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
llm-org-cost-monitor = "llm_org_cost_monitor.cli:app"
llm-org-cost = "llm_org_cost_monitor.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_org_cost_monitor"]
